fix: posts images

--- a/_posts/2022-10-01-devlog-01.md
+++ b/_posts/2022-10-01-devlog-01.md
@@ -34,7 +34,7 @@ Don't worry tough, there's still space for something... *extra*!
 
 And now, here's a sneak preview of what we came up with recently:
 
-![burrybear]({{ BASE_PATH }}/assets/posts/2022-10-01/burrybear.png)
+![burrybear]({{site.baseurl | prepend: site.url}}assets/posts/2022-10-01/burrybear.png)
 
 I'm happy to introduce you to Burrybear, our first creature concept, who's author, Port, is really proud of. They're based on the [Chapalmania](https://en.wikipedia.org/wiki/Chapalmalania) genus, featuring some body parts taken from pandas, racoons and cats.
 
@@ -42,7 +42,7 @@ One thing to notice, is that there's a natural *evolution* going on from left to
 
 And now for something a little bit more... familiar:
 
-![burrybear]({{ BASE_PATH }}/assets/posts/2022-10-01/doggola.png)
+![burrybear]({{site.baseurl | prepend: site.url}}assets/posts/2022-10-01/doggola.png)
 
 Doggola is a cat/dog based creature, inspired by Port ideas and designed by Esquilito! It has a unique fur pattern and a particular tuft on their forehead.
 
